--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "engilsh-web",
   "version": "1.0.0",
   "description": "",
-  "main": "admissiondatbase.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
